<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/balance"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navbar"
        app:layout_constraintTop_toBottomOf="@id/balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <LinearLayout
                android:id="@+id/pay"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_pay"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/description_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_pay"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/request"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_req"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_req"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/description_req"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/des_req"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/paybill"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/semiwhite"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
                app:layout_constraintTop_toBottomOf="@id/pay">

                <TextView
                    android:id="@+id/title_paybill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_payb"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/description_paybill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_payb"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/airtime"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:orientation="vertical"
                android:layout_marginVertical="10dp"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="@id/verticalGuideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/request">

                <TextView
                    android:id="@+id/title_airtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_airtime"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/description_airtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_airtime"
                    android:textColor="@color/black"/>
            </LinearLayout>






        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/navbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>